# Trivyn

./: .gitignore  CLAUDE.md  FEATURES.md  How_to_fix_your_entire_life_in_1_day.md  PRIVACY.md  PRIVACY_en.md  PROPOSAL.md  PROPOSAL_life_improvement_features.md  Package.swift  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml  release.yml
Casks/: trivyn.rb
Sources/Tria/App/: AppDelegate.swift  TriaApp.swift
Sources/Tria/Models/: AppSettings.swift  Goal.swift
Sources/Tria/Services/: FloatingWindowController.swift  ReminderService.swift  StatusBarController.swift  StorageService.swift
Sources/Tria/ViewModels/: GoalStore.swift
Sources/Tria/Views/: ConfettiView.swift  FloatingWindowView.swift  GoalRowView.swift  HistoryView.swift  MenuBarPopoverView.swift  (+2 more)
docs/: index.html
scripts/: build-app.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: goals.rs  mod.rs  periods.rs  reflections.rs  settings.rs  window.rs
src-tauri/src/db/: goals.rs  mod.rs  reflections.rs  settings.rs
src-tauri/src/models/: goal.rs  mod.rs  reflection.rs  settings.rs
src-tauri/src/reflection_reminder/: background.rs  mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: mod.rs
src/i18n/: index.ts
src/store/: goalStore.ts  reflectionStore.ts  settingsStore.ts  updateStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: periods.ts
(+16 files in other folders)
